--- a/templates/academy_site/header.html
+++ b/templates/academy_site/header.html
@@ -22,10 +22,10 @@
         <div class="wr">
             <div class="r-side">
                 <div class="phone">
-                    Call us for <a href="tel:1800-888-999">1800-888-999</a>
+                    Call us for <a href="tel:{{ common_contact_us_phone }}">{{ common_contact_us_phone }}</a>
                 </div>
                 <div class="email">
-                    <a href="mailto:info@herstelacademie.be">info@herstelacademie.be</a>
+                    <a href="mailto:{{ common_contact_us_email }}">{{ common_contact_us_email }}</a>
                 </div>
             </div>
         </div>
