--- a/front/academy_site/style/modules/_header-signin.scss
+++ b/front/academy_site/style/modules/_header-signin.scss
@@ -78,7 +78,7 @@
           font-weight: bold;
           letter-spacing: 0.1px;
           color: #505363;
-          margin: 0 25px 0 0;
+          //margin: 0 25px 0 0;
           position: relative;
           cursor: pointer;
           white-space: nowrap;
