--- a/front/academy_site/style/modules/_our-teachers.scss
+++ b/front/academy_site/style/modules/_our-teachers.scss
@@ -6,7 +6,7 @@
     }
     .teachers-list{
       display: flex;
-      //border-bottom: solid 1px #8c97b2;
+      border-bottom: solid 1px #8c97b2;
       ul{
         display: flex;
         flex-basis: 75%;
