--- a/front/academy_site/style/modules/_teacher-show-more-popup.scss
+++ b/front/academy_site/style/modules/_teacher-show-more-popup.scss
@@ -18,7 +18,7 @@
       flex-wrap: wrap;
       margin: 0 auto;
       li{
-        margin: 0 0 50px 0;
+        margin: 0 3% 50px 0;
         text-align: center;
         flex-basis: 14%;
         //&:nth-child(5n){
